feat: update lombok to 1.18.24-1